--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/background.css">
     <title>Sakura AutoTech</title>
 </head>
+
 <body>
     <nav></nav>
+    <section class="background">
+        <div class="background-container">
+            <div class="background-grid">
+                <h2 class="background-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</h2>
+                <p class="background-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
+                <button class="background-button">connect</button>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
