--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="./css/style.css">
+    <link rel="stylesheet" href="./css/nav-bar.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Sakura AutoTech</title>
 </head>
 <body>
-    <nav></nav>
+    <nav>
+        <div class="nav-bar-left">
+            <img src="">
+            <a href="#">products</a>
+            <a href="#">contact</a>
+            <a href="#">about us</a>
+            <button>
+        </div>
+        <div class="nav-bar-right">
+            <a href="#">login</a>
+            <a href="#">register</a>
+        </div>
+    </nav>
 </body>
 </html>
