--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/nav-bar.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/background.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/card.css">
     <title>Sakura AutoTech</title>
 </head>
 
@@ -20,9 +22,11 @@
             <a href="#">about us</a>
             <a href="#">sponsors</a>
             <button>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                  </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                </svg>
             </button>
         </div>
         <div class="nav-bar-right">
@@ -30,7 +34,6 @@
             <a href="#">register</a>
         </div>
     </nav>
-      
     <section class="background">
         <div class="background-container">
             <div class="background-grid">
@@ -40,6 +43,104 @@
             </div>
         </div>
     </section>
+    <section class="home">
+        <div class="home-links">
+            <a href="#" class="topics-home">random</a>
+            <a href="#" class="topics-home">random</a>
+            <a href="#" class="topics-home">random</a>
+        </div>
+        <div class="border-bottom-links">a</div>
+    </section>
+    <section class="card-section">
+        <div class="line-card">
+            <div class="card">
+                <div class="card-container">
+                    <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
+                    <h1 class="title-card">Lorem ipsum dolor sit</h1>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
+                    <h2 class="price-card">R$899,99</h2>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-container">
+                    <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
+                    <h1 class="title-card">Lorem ipsum dolor sit</h1>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
+                    <h2 class="price-card">R$899,99</h2>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-container">
+                    <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
+                    <h1 class="title-card">Lorem ipsum dolor sit</h1>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
+                    <h2 class="price-card">R$899,99</h2>
+                </div>
+            </div>
+        </div>
+        <div class="line-card">
+            <div class="card">
+                <div class="card-container">
+                    <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
+                    <h1 class="title-card">Lorem ipsum dolor sit</h1>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
+                    <h2 class="price-card">R$899,99</h2>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-container">
+                    <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
+                    <h1 class="title-card">Lorem ipsum dolor sit</h1>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
+                    <h2 class="price-card">R$899,99</h2>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-container">
+                    <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
+                    <h1 class="title-card">Lorem ipsum dolor sit</h1>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
+                    <h2 class="price-card">R$899,99</h2>
+                </div>
+            </div>
+        </div>
+        <div class="line-card">
+            <div class="card">
+                <div class="card-container">
+                    <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
+                    <h1 class="title-card">Lorem ipsum dolor sit</h1>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
+                    <h2 class="price-card">R$899,99</h2>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-container">
+                    <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
+                    <h1 class="title-card">Lorem ipsum dolor sit</h1>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
+                    <h2 class="price-card">R$899,99</h2>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-container">
+                    <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
+                    <h1 class="title-card">Lorem ipsum dolor sit</h1>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
+                    <h2 class="price-card">R$899,99</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="./js/limiter.js"></script>
 </body>
 
 </html>
