refactor/alteração de cores e alguns ajustes no footer

--- a/index.html
+++ b/index.html
@@ -142,9 +142,7 @@
         </div>
     </section>
     <footer>
-        <div class="top-bottom-footer">
-            <h4>chat support help <a class="click-here" href="#">here.</a></h4>
-        </div>
+        
         <div class="footer-info">
             <div class="footer-links">
                 <a href="#">products</a>
@@ -171,8 +169,9 @@
                 </a>
             </div>
         </div>
-        <div class="top-bottom-footer">
+        <div class="bottom-footer">
             <h4>© 1997 - 2023 sakura autotech all rights reserved.</h4>
+            <h4>chat support help <a class="click-here" href="#">here.</a></h4>
         </div>
     </footer>
     <script src="./js/limiter.js"></script>
