feature/adicionei o card vindo do js

--- a/index.html
+++ b/index.html
@@ -55,56 +55,6 @@
     <section class="card-section">
         <div class="grid-container">
             <div class="line-card">
-                <div class="card">
-                    <div class="card-container">
-                        <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
-                        <h1 class="title-card">Lorem ipsum dolor sit</h1>
-                        <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis
-                            massa
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
-                        <h2 class="price-card">R$899,99</h2>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-container">
-                        <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
-                        <h1 class="title-card">Lorem ipsum dolor sit</h1>
-                        <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis
-                            massa
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
-                        <h2 class="price-card">R$899,99</h2>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-container">
-                        <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
-                        <h1 class="title-card">Lorem ipsum dolor sit</h1>
-                        <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis
-                            massa
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
-                        <h2 class="price-card">R$899,99</h2>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-container">
-                        <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
-                        <h1 class="title-card">Lorem ipsum dolor sit</h1>
-                        <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis
-                            massa
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
-                        <h2 class="price-card">R$899,99</h2>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-container">
-                        <img src="./assets/img/0e10e16ea89ec51f52afd8d1ae0fba58.jpg" alt="" class="img-card">
-                        <h1 class="title-card">Lorem ipsum dolor sit</h1>
-                        <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis
-                            massa
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis massa</p>
-                        <h2 class="price-card">R$899,99</h2>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -147,6 +97,7 @@
             <h4>chat support help <a class="click-here" href="#">here.</a></h4>
         </div>
     </footer>
+    <script src="./js/card.js"></script>
     <script src="./js/limiter.js"></script>
 </body>
 
