feature/criação de input e filtragem

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/nav-bar.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/nav-bar.css">
+    <link rel="stylesheet" href="./css/search.css">
     <link rel="stylesheet" href="./css/background.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/card.css">
@@ -29,8 +30,11 @@
                         d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                 </svg>
             </button>
+            <div class="search-container">
+                <input type="text" id="searchInput" placeholder=""">
+            </div>
         </div>
-        <div class="nav-bar-right">
+        <div class=" nav-bar-right">
             <a href="#">login</a>
             <a href="#">register</a>
         </div>
@@ -99,6 +103,9 @@
     </footer>
     <script src="./js/card.js"></script>
     <script src="./js/limiter.js"></script>
+    <script src="./js/search.js"></script>
 </body>
 
 </html>
+
+
