--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="card-section">
         <div class="grid-container">
             <div class="line-card">
-                <div id="notFound" style="display: none;">
+                <div id="notFound" style="display: none">
                     <h1 id="title-not-found">Sorry, we couldn't find anything related to your search. If you have any questions, please contact our support or reach out via direct message on Instagram.</h1>
                 </div>
             </div>
