--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div id="myModal" class="modal">
+    <div id="my-modal" class="modal">
         <div class="modal-container">
             <div class="modal-content">
                 <div class="modal-content-left"></div>
@@ -28,7 +28,7 @@
         </div>
     </div>
     <nav>
-        <div class="nav-bar-left">
+        <div class="nav-bar">
             <img src="">
             <a href="#">products</a>
             <a href="#">brands</a>
@@ -43,10 +43,6 @@
                         d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                 </svg>
             </div>
-        </div>
-        <div class=" nav-bar-right">
-            <a href="#">login</a>
-            <a href="#">register</a>
         </div>
     </nav>
     <section class="background">
